# embeddedTest

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.save  README.md
Test/: CMakeLists.txt  sampleTest.cpp
src/: CMakeLists.txt  hello.cpp
